more spacing corrections

--- a/talks/alfabetizacao/style.css
+++ b/talks/alfabetizacao/style.css
@@ -69,7 +69,7 @@ strong:hover {
     color: #9FE090;
 }
 
-p {
+.imagem p {
     padding: 5px;
 }
 
